--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <div class="task__out-tasks"></div>
       </div>
     </section>
+    <a href="log.html">Log version</a>
     <script src="index.js"></script>
   </body>
 </html>
